fix: style overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@ body {
 
 .column {
   border-left: 1px solid gray;
-  width: 100%;
+  /* width: 100%; */
   flex: 1;
   display: flex;
   padding: 1rem;
@@ -111,7 +111,7 @@ body {
   margin-bottom: 1rem;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1000px) {
   .container {
     flex-direction: column;
     height: fit-content;
