--- a/src/components/TripSummary.css
+++ b/src/components/TripSummary.css
@@ -116,7 +116,7 @@ p {
   margin: 0;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1000px) {
   .midMid1 {
     flex-direction: column;
     /* height: fit-content; */
